--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,16 @@
 
     <packaging>pom</packaging>
 
+    <modules>
+        <module>mybatis</module>
+    </modules>
+
+    <properties>
+        <druid.version>1.1.21</druid.version>
+        <mybatis.starter.version>2.1.0</mybatis.starter.version>
+        <postgresql.version>42.2.5</postgresql.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -36,5 +46,25 @@
             </exclusions>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
