--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
     <properties>
         <druid.version>1.1.21</druid.version>
+        <mybatis.plus.starter.version>3.2.0</mybatis.plus.starter.version>
         <mybatis.starter.version>2.1.0</mybatis.starter.version>
         <postgresql.version>42.2.5</postgresql.version>
     </properties>
@@ -53,6 +54,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis.plus.starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
