--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,12 @@
 
     <modules>
         <module>mybatis</module>
+        <module>web</module>
     </modules>
 
     <properties>
         <druid.version>1.1.21</druid.version>
+        <fastjson.version>1.2.57</fastjson.version>
         <mybatis.plus.starter.version>3.2.0</mybatis.plus.starter.version>
         <mybatis.starter.version>2.1.0</mybatis.starter.version>
         <postgresql.version>42.2.5</postgresql.version>
@@ -54,6 +56,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
