--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <mybatis.plus.starter.version>3.2.0</mybatis.plus.starter.version>
         <mybatis.starter.version>2.1.0</mybatis.starter.version>
         <postgresql.version>42.2.5</postgresql.version>
+        <swagger.version>2.9.2</swagger.version>
     </properties>
 
     <dependencies>
@@ -76,6 +77,16 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${swagger.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
