增加mybatis-plus-dynamic-datasource模块

--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>mybatis-base</module>
         <module>mybatis-plus</module>
+        <module>mybatis-plus-dynamic-datasource</module>
     </modules>
 
 </project>
