--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
     <properties>
         <druid.version>1.1.21</druid.version>
         <fastjson.version>1.2.57</fastjson.version>
-        <mybatis.plus.starter.version>3.2.0</mybatis.plus.starter.version>
+        <mybatis.plus.starter.version>3.3.0</mybatis.plus.starter.version>
+        <dynamic.datasource.starter.version>2.5.7</dynamic.datasource.starter.version>
         <mybatis.starter.version>2.1.0</mybatis.starter.version>
         <postgresql.version>42.2.5</postgresql.version>
         <swagger.version>2.9.2</swagger.version>
@@ -67,6 +68,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis.plus.starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                <version>${dynamic.datasource.starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
