--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.0.RELEASE</version>
+        <version>2.2.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -20,6 +20,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>jms</module>
         <module>mybatis</module>
         <module>web</module>
     </modules>
@@ -31,6 +32,7 @@
         <dynamic.datasource.starter.version>2.5.7</dynamic.datasource.starter.version>
         <mybatis.starter.version>2.1.0</mybatis.starter.version>
         <postgresql.version>42.2.5</postgresql.version>
+        <rocketmq.start.version>2.0.4</rocketmq.start.version>
         <swagger.version>2.9.2</swagger.version>
     </properties>
 
@@ -83,6 +85,11 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq.start.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
